[package]
name = "freehue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
warp = "0.3.6"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
hex = "0.4.3"
hsl = "0.1.1"